--- a/platformio.ini
+++ b/platformio.ini
@@ -15,3 +15,4 @@ framework = arduino
 lib_deps = 
 	sandeepmistry/LoRa@^0.8.0
 	thingpulse/ESP8266 and ESP32 OLED driver for SSD1306 displays@^4.2.0
+	beegee-tokyo/DHT sensor library for ESPx @ ^1.19
