--- a/platformio.ini
+++ b/platformio.ini
@@ -20,3 +20,5 @@ lib_deps =
 	thingpulse/ESP8266 and ESP32 OLED driver for SSD1306 displays@^4.2.0
 	beegee-tokyo/DHT sensor library for ESPx @ ^1.19
 	me-no-dev/ESP Async WebServer@^1.2.3
+
+build_flags =   -D SLAVE
