Envio dados MQTT

--- a/platformio.ini
+++ b/platformio.ini
@@ -20,5 +20,7 @@ lib_deps =
 	thingpulse/ESP8266 and ESP32 OLED driver for SSD1306 displays@^4.2.0
 	beegee-tokyo/DHT sensor library for ESPx @ ^1.19
 	me-no-dev/ESP Async WebServer@^1.2.3
+	knolleary/PubSubClient@^2.8
+	ArduinoJson
 
-build_flags =   -D SLAVE
+build_flags =   -D MASTER
