--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,7 +14,7 @@
             "name": "PIO Debug",
             "executable": "C:/Users/GreenV.LAPTOP-81U2B1LR.000/Documents/PlatformIO/Projects/LoRa_Project/.pio/build/heltec_wifi_lora_32_V2/firmware.elf",
             "projectEnvName": "heltec_wifi_lora_32_V2",
-            "toolchainBinDir": "C:/Users/GreenV.LAPTOP-81U2B1LR.000/.platformio/packages/toolchain-xtensa-esp32/bin",
+            "toolchainBinDir": "C:/Users/GreenV.LAPTOP-81U2B1LR.000/.platformio/packages/toolchain-xtensa-esp32@8.4.0+2021r2-patch5/bin",
             "internalConsoleOptions": "openOnSessionStart",
             "preLaunchTask": {
                 "type": "PlatformIO",
@@ -27,7 +27,7 @@
             "name": "PIO Debug (skip Pre-Debug)",
             "executable": "C:/Users/GreenV.LAPTOP-81U2B1LR.000/Documents/PlatformIO/Projects/LoRa_Project/.pio/build/heltec_wifi_lora_32_V2/firmware.elf",
             "projectEnvName": "heltec_wifi_lora_32_V2",
-            "toolchainBinDir": "C:/Users/GreenV.LAPTOP-81U2B1LR.000/.platformio/packages/toolchain-xtensa-esp32/bin",
+            "toolchainBinDir": "C:/Users/GreenV.LAPTOP-81U2B1LR.000/.platformio/packages/toolchain-xtensa-esp32@8.4.0+2021r2-patch5/bin",
             "internalConsoleOptions": "openOnSessionStart"
         },
         {
@@ -36,7 +36,7 @@
             "name": "PIO Debug (without uploading)",
             "executable": "C:/Users/GreenV.LAPTOP-81U2B1LR.000/Documents/PlatformIO/Projects/LoRa_Project/.pio/build/heltec_wifi_lora_32_V2/firmware.elf",
             "projectEnvName": "heltec_wifi_lora_32_V2",
-            "toolchainBinDir": "C:/Users/GreenV.LAPTOP-81U2B1LR.000/.platformio/packages/toolchain-xtensa-esp32/bin",
+            "toolchainBinDir": "C:/Users/GreenV.LAPTOP-81U2B1LR.000/.platformio/packages/toolchain-xtensa-esp32@8.4.0+2021r2-patch5/bin",
             "internalConsoleOptions": "openOnSessionStart",
             "loadMode": "manual"
         }
