Resolvendo bugs, mudança de parâmetros

--- a/lora-grafana/docker-compose.yml
+++ b/lora-grafana/docker-compose.yml
@@ -33,7 +33,7 @@ services:
   python-client:
     build:
       context: .
-      dockerfile: clientmqtt.dockerfile
+      dockerfile: client-mqtt.dockerfile
     depends_on:
       - mosquitto
       - influx
