--- a/platformio.ini
+++ b/platformio.ini
@@ -4,9 +4,6 @@
 ;   Upload options: custom upload port, speed and extra flags
 ;   Library options: dependencies, extra library storages
 ;   Advanced options: extra scripting
-;
-; Please visit documentation for the other options and examples
-; https://docs.platformio.org/page/projectconf.html
 
 [env:heltec_wifi_lora_32_V2]
 platform = espressif32
@@ -23,4 +20,4 @@ lib_deps =
 	knolleary/PubSubClient@^2.8
 	ArduinoJson
 
-build_flags =   -D CONTROLLER ;Comment or uncomment this line depending on whether it is a "controller" or "responder"
+build_flags =   ;-D CONTROLLER ;Comment or uncomment this line depending on whether it is a "controller" or "responder"
