--- a/platformio.ini
+++ b/platformio.ini
@@ -20,4 +20,4 @@ lib_deps =
 	knolleary/PubSubClient@^2.8
 	ArduinoJson
 
-build_flags =   ;-D CONTROLLER ;Comment or uncomment this line depending on whether it is a "controller" or "responder"
+build_flags =   -D CONTROLLER ;Comment or uncomment this line depending on whether it is a "controller" or "responder"
